--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --report lcov node_modules/mocha/bin/_mocha -- --reporter dot",
     "build": "npm run clean && webpack --config ./tools/webpack.prod",
     "clean": "rm -rf public/assets",
+    "prestart": "npm run build",
     "start": "node server.js",
     "test": "mocha --compilers js:babel-core/register --recursive",
     "extract": "node services/extract",
